Add npm install before running tests

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -18,6 +18,7 @@ jobs:
               - |
                 set -e
                 cd repo
+                npm install
                 npm test
 
 resources:
